--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
 
 <h1>My First Heading</h1>
 <p>My first paragraph.</p>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9037468551885872"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-fb+5w+4e-db+86"
+     data-ad-client="ca-pub-9037468551885872"
+     data-ad-slot="2434699523"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+     
+     
 </body>
 </html>
